# my-python-app

./: Makefile  README.md  main.py  pyproject.toml
src/basic_problems/: simple_problems.py
src/utils/: logic.py  utils.py
tests/: test_logic.py  test_utils.py
tests/basic_problems/: test_simple_problems.py
